fixed links on sidenav on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,6 @@ body {
     color: #818181;
     display: block;
     transition: 0.3s;
-    cursor: pointer;
 }
 
 .sidenav a:hover, .offcanvas a:focus{
